platform/manifests/backstage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  labels:
    app: backstage
spec:
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: quay.io/pierdipi/backstage:kubecon-na-2024-templates-node20
          imagePullPolicy: Always
          command:
            - node
          args:
            - packages/backend
            - --config
            - /config/app-config.production.yaml
          ports:
            - containerPort: 7007

          # https://backstage.io/docs/backend-system/core-services/root-health/
#          readinessProbe:
#            httpGet:
#              port: 7007
#              path: /.backstage/health/v1/readiness
#            periodSeconds: 3
#            initialDelaySeconds: 5
#            successThreshold: 3
#            failureThreshold: 5
#          livenessProbe:
#            httpGet:
#              port: 7007
#              path: /.backstage/health/v1/liveness
#            periodSeconds: 5
#            initialDelaySeconds: 5
#            failureThreshold: 5

          securityContext: # OpenShift requires specific security contexts for non-root containers
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /config
              name: app-config
              readOnly: true
      volumes:
        - name: app-config
          secret:
            secretName: app-config
      restartPolicy: Always
