platform/manifests/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  labels:
    app: backstage
spec:
  selector:
    app: backstage
  ports:
    - port: 7007
      targetPort: 7007
      protocol: TCP
      appProtocol: http
      name: http
  type: ClusterIP
